# camera_wrapper

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  README_CN.md
demos/cpp_demo/: CMakeLists.txt  main.cpp
demos/qt_demo/: CMakeLists.txt  camera_bridge.cpp  camera_bridge.h  main.cpp  main_window.cpp  main_window.h  main_window.ui
wrapper/: CMakeLists.txt
wrapper/include/camera_wrapper/: camera.h  camera_enumerator.h  device_info.h  enumerator_factory.h  export.h  frame_callback_manager.h  frame_queue.h  grab_config.h  image_frame.h  status_callback_manager.h  transport_config.h
wrapper/src/: device_info.cpp  enumerator_factory.cpp  frame_callback_manager.cpp  frame_queue.cpp  hik_camera.cpp  hik_camera.h  hik_enumerator.cpp  hik_enumerator.h  status_callback_manager.cpp
